# tcl_tools

./: .gitignore  LICENSE.txt  Makefile.in  README.md  configure  configure.ac  extexpr.tcl  gnuplotutil.tcl  mathutil.tcl  measure.tcl  pkgIndex.tcl  pkgIndex.tcl.in  rfutil.tcl  touchstoneutil.tcl
.bak/: fb.s2p  fb_0.0A.s2p  fb_1.4A.s2p  fb_fixt_app.s2p  gnuplot_interactive.tcl  gnuplotutil-1.0.test  gnuplotutil-1.0.tm  gnuplotutil.md  mathutil-1.0.test  mathutil-1.0.tm  read_s2p.tcl  rfutil-1.0.test  rfutil-1.0.tm  s2p_file_example_ri.s2p  sd_g_top_vd_0.5v.s2p  tcl_tools.geany  touchstoneutil-1.0.test  touchstoneutil-1.0.tm
autom4te.cache/: output.0  requests  traces.0
docs/: doc_gen.tcl  index-docindex.html  index-gnuplotutil.html  index-mathutil.html  index-measure.html  index-rfutil.html  index-tcl-mathfunc.html  index-touchstoneutil.html  index.html  startPage.ruff  tcl_tools-gnuplotutil.n  tcl_tools-mathutil.n  tcl_tools-measure.n  tcl_tools-rfutil.n  tcl_tools-tcl-mathfunc.n  tcl_tools-touchstoneutil.n  tcl_tools.n
docs/assets/: ruff-min.css
src/: gnuplotutil.tcl  mathutil.tcl  rfutil.tcl  touchstoneutil.tcl
test/: all.tcl  all_codeCoverage.tcl  arbitaryTests.tcl  codeCoverage.tcl  extexpr.test  gnuplotutil.test  mathutil.test  measure.test  perfTest.tcl  rfutil.test  touchstoneutil.test
test/example_files/: ds_top.s2p  s2p_file_example_db.s2p
